spacing issue fix

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -15,6 +15,10 @@
         margin: 5px 0px !important;
     }
 
+    .card-img{
+
+    }
+
     .container-right{
         align-items: center;
         justify-content: center;
